David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Follow_Up_Visit_Information__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Visit_Information__c</fullName>
    <description>02/03/2025 (BW) - Gives details of the follow up visit that is required</description>
    <label>Follow-Up Visit Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>