David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Follow_Up_Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Visit_Reason__c</fullName>
    <description>02/03/2025 (BW) - Reason given by the technician for a follow up visit</description>
    <label>Follow Up Visit Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>