David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/FSR_Date_US__c.field-meta.xml
<CustomField>
    <fullName>FSR_Date_US__c</fullName>
    <label>FSR Date</label>
    <type>Date</type>
</CustomField>