David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Full_Field_Dose_Comments__c.field-meta.xml
<CustomField>
    <fullName>Full_Field_Dose_Comments__c</fullName>
    <label>Full Field Dose Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>