David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Full_System_Functional_Check__c.field-meta.xml
<CustomField>
    <fullName>Full_System_Functional_Check__c</fullName>
    <label>Full System Functional Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>