David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Full_System_Functional_Check_Comments__c.field-meta.xml
<CustomField>
    <fullName>Full_System_Functional_Check_Comments__c</fullName>
    <label>Full System Functional Check Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>