David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Gantry_Lift__c.field-meta.xml
<CustomField>
    <fullName>Gantry_Lift__c</fullName>
    <label>Gantry Lift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>