David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Gantry_Lift_Comments__c.field-meta.xml
<CustomField>
    <fullName>Gantry_Lift_Comments__c</fullName>
    <label>Gantry Lift Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>