David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Gantry_Rotation__c.field-meta.xml
<CustomField>
    <fullName>Gantry_Rotation__c</fullName>
    <label>Gantry Rotation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>