David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Gantry_Rotation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Gantry_Rotation_Comments__c</fullName>
    <label>Gantry Rotation Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>