David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/General_Checks_Comments__c.field-meta.xml
<CustomField>
    <fullName>General_Checks_Comments__c</fullName>
    <label>General Checks Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>