David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Generate_Service_Report_HTML__c.field-meta.xml
<CustomField>
    <fullName>Generate_Service_Report_HTML__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the FSL checklists to trigger the generation of the &quot;Checklist Output (formatted)&quot; field.</description>
    <label>Generate Service Report HTML</label>
    <type>Checkbox</type>
</CustomField>