David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Grid_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Grid_Assembly__c</fullName>
    <label>Grid Assembly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>