David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Grid_Assembly_Comments__c.field-meta.xml
<CustomField>
    <fullName>Grid_Assembly_Comments__c</fullName>
    <label>Grid Assembly Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>