David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Handswitch_and_Foot_Pedals__c.field-meta.xml
<CustomField>
    <fullName>Handswitch_and_Foot_Pedals__c</fullName>
    <label>Handswitch and Foot Pedals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>