David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Handswitch_and_Foot_Pedals_Comments__c.field-meta.xml
<CustomField>
    <fullName>Handswitch_and_Foot_Pedals_Comments__c</fullName>
    <label>Handswitch and Foot Pedals Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>