David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Handswitch_Holder__c.field-meta.xml
<CustomField>
    <fullName>Handswitch_Holder__c</fullName>
    <label>Handswitch Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>