David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Handswitch_Holder_Comments__c.field-meta.xml
<CustomField>
    <fullName>Handswitch_Holder_Comments__c</fullName>
    <label>Handswitch Holder Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>