David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Host_Chip_ID__c.field-meta.xml
<CustomField>
    <fullName>Host_Chip_ID__c</fullName>
    <formula>Contract_Line_Item__r.Host_Chip_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host/Chip ID</label>
    <type>Text</type>
</CustomField>