David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Hour_s_Required__c.field-meta.xml
<CustomField>
    <fullName>Hour_s_Required__c</fullName>
    <inlineHelpText>The approximate number of hour(s) to complete the next visit</inlineHelpText>
    <label>Hour(s) Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>