David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Hours_Required_for_Follow_Up_Visit__c.field-meta.xml
<CustomField>
    <fullName>Hours_Required_for_Follow_Up_Visit__c</fullName>
    <description>Delegate - For engineers to add context to Service Appointments for anticipated follow on appointments.</description>
    <inlineHelpText>For engineers to add context to Service Appointments for anticipated time on follow up appointments.</inlineHelpText>
    <label>Hours Required for Follow Up Visit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>