David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/HT_Cable_Status_and_Continuity__c.field-meta.xml
<CustomField>
    <fullName>HT_Cable_Status_and_Continuity__c</fullName>
    <label>HT Cable Status and Continuity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>