David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/HT_Cable_Status_and_Continuity_Comments__c.field-meta.xml
<CustomField>
    <fullName>HT_Cable_Status_and_Continuity_Comments__c</fullName>
    <label>HT Cable Status and Continuity Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>