David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Image_Display_Quality__c.field-meta.xml
<CustomField>
    <fullName>Image_Display_Quality__c</fullName>
    <label>Image Display Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>