David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Image_Display_Quality_Comments__c.field-meta.xml
<CustomField>
    <fullName>Image_Display_Quality_Comments__c</fullName>
    <label>Image Display Quality Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>