David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Imaging_Checks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Checks_Comments__c</fullName>
    <label>Imaging Checks Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>