David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Include_Return_Label__c.field-meta.xml
<CustomField>
    <fullName>Include_Return_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Return Label?</label>
    <type>Checkbox</type>
</CustomField>