David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Injector_Head_and_Housing_Condition__c.field-meta.xml
<CustomField>
    <fullName>Injector_Head_and_Housing_Condition__c</fullName>
    <label>Injector Head and Housing Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>