David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Injector_Head_Comments__c.field-meta.xml
<CustomField>
    <fullName>Injector_Head_Comments__c</fullName>
    <label>Injector Head Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>