David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Instructions_For_Use__c.field-meta.xml
<CustomField>
    <fullName>Instructions_For_Use__c</fullName>
    <label>Instructions For Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Not Present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>