David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Instructions_For_Use_Comments__c.field-meta.xml
<CustomField>
    <fullName>Instructions_For_Use_Comments__c</fullName>
    <label>Instructions For Use Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>