David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Insulation_Resistance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Resistance_Comments__c</fullName>
    <label>Insulation Resistance Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>