David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Intended_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Intended_Start_Date_Time__c</fullName>
    <description>03/10/2025 (BW) - holds the intended start date/time for this work order</description>
    <label>Intended Start Date/Time</label>
    <type>DateTime</type>
</CustomField>