David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Interconnect_Collision_Detects__c.field-meta.xml
<CustomField>
    <fullName>Interconnect_Collision_Detects__c</fullName>
    <label>Interconnect/Collision Detects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>