David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Interconnect_Collision_Detects_Comments__c.field-meta.xml
<CustomField>
    <fullName>Interconnect_Collision_Detects_Comments__c</fullName>
    <label>Interconnect/Collision Detects Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>