David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Interlocks_and_Mechanical_Stops__c.field-meta.xml
<CustomField>
    <fullName>Interlocks_and_Mechanical_Stops__c</fullName>
    <label>Interlocks and Mechanical Stops</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>