David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Interlocks_and_Mechanical_Stops_Comments__c.field-meta.xml
<CustomField>
    <fullName>Interlocks_and_Mechanical_Stops_Comments__c</fullName>
    <label>Interlocks and Mechanical Stops Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>