David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Internal_Designation__c.field-meta.xml
<CustomField>
    <fullName>Internal_Designation__c</fullName>
    <label>Internal Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depot Repair</fullName>
            </value>
            <value>
                <fullName>Probe Exchange</fullName>
            </value>
            <value>
                <fullName>Probe Repair</fullName>
            </value>
            <value>
                <fullName>PPM Follow-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>