David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>04/07/2025 - Kyle - Internal Notes text to long text area conversion</description>
    <label>Internal Notes</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>