David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/kV_mA_EC_and_Timing_Comments__c.field-meta.xml
<CustomField>
    <fullName>kV_mA_EC_and_Timing_Comments__c</fullName>
    <label>kV/mA EC and Timing Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>