David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/kV_mA_Exposure_Checks_and_Timing__c.field-meta.xml
<CustomField>
    <fullName>kV_mA_Exposure_Checks_and_Timing__c</fullName>
    <label>kV/mA Exposure Checks and Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>