David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Labelling_Comments__c.field-meta.xml
<CustomField>
    <fullName>Labelling_Comments__c</fullName>
    <label>Labelling Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>