David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours__c</fullName>
    <label>Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>