David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Labor_Rate__c</fullName>
    <label>Labor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>