David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Ladder_Pre_use_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Ladder_Pre_use_Check_Completed__c</fullName>
    <label>Ladder Pre-use Check Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>