David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Lamp_and_Laser_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Lamp_and_Laser_Alignment__c</fullName>
    <label>Lamp and Laser Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>