David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Lamp_and_Laser_Alignment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lamp_and_Laser_Alignment_Comments__c</fullName>
    <label>Lamp and Laser Alignment Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>