David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Laser_Lights__c.field-meta.xml
<CustomField>
    <fullName>Laser_Lights__c</fullName>
    <label>Laser Lights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>