David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Laser_Lights_Comments__c.field-meta.xml
<CustomField>
    <fullName>Laser_Lights_Comments__c</fullName>
    <label>Laser Lights Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>