David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Last_Battery_Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Battery_Replacement_Date__c</fullName>
    <label>Last Battery Replacement Date</label>
    <type>Date</type>
</CustomField>