David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Lead_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Engineer__c</fullName>
    <formula>Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Engineer</label>
    <type>Text</type>
</CustomField>