David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Limit_Switch_Cables__c.field-meta.xml
<CustomField>
    <fullName>Limit_Switch_Cables__c</fullName>
    <label>Limit Switch Cables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>