David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Limit_Switch_Cables_Comments__c.field-meta.xml
<CustomField>
    <fullName>Limit_Switch_Cables_Comments__c</fullName>
    <label>Limit Switch Cables Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>