David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Limit_Switches__c.field-meta.xml
<CustomField>
    <fullName>Limit_Switches__c</fullName>
    <label>Limit Switches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>