David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Line_Item_System__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_System__c</fullName>
    <formula>Work_Order__r.Contract_Line_Item__r.PricebookEntry.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item System</label>
    <type>Text</type>
</CustomField>