David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Local_AE_Title__c.field-meta.xml
<CustomField>
    <fullName>Local_AE_Title__c</fullName>
    <formula>Contract_Line_Item__r.Local_AE_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local AE Title</label>
    <type>Text</type>
</CustomField>