David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Local_Default_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Local_Default_Gateway__c</fullName>
    <formula>Contract_Line_Item__r.Local_Default_Gateway__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Default Gateway</label>
    <type>Text</type>
</CustomField>