David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Local_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Local_IP_Address__c</fullName>
    <formula>Contract_Line_Item__r.Local_IP_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local IP Address</label>
    <type>Text</type>
</CustomField>