David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Local_Port_No__c.field-meta.xml
<CustomField>
    <fullName>Local_Port_No__c</fullName>
    <formula>Contract_Line_Item__r.Local_Port_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Port No</label>
    <type>Text</type>
</CustomField>