David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Local_Subnet_Mask__c.field-meta.xml
<CustomField>
    <fullName>Local_Subnet_Mask__c</fullName>
    <formula>Contract_Line_Item__r.Local_Subnet_Mask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Subnet Mask</label>
    <type>Text</type>
</CustomField>