David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Location_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>02/10/2025 (BW) - This holds the location of the equipment (account) from the contract line item the work order is affiliated with.</description>
    <label>Location of Equipment</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>