David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mag_3__c.field-meta.xml
<CustomField>
    <fullName>Mag_3__c</fullName>
    <label>Mag 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10%</fullName>
            </value>
            <value>
                <fullName>11-20%</fullName>
            </value>
            <value>
                <fullName>&gt;20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>