David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mag_Stands__c.field-meta.xml
<CustomField>
    <fullName>Mag_Stands__c</fullName>
    <label>Mag Stands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>