David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mag_Stands_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mag_Stands_Comments__c</fullName>
    <label>Mag Stands Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>