David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Main_Screen_and_Touchscreen_Clean__c.field-meta.xml
<CustomField>
    <fullName>Main_Screen_and_Touchscreen_Clean__c</fullName>
    <label>Main Screen and Touchscreen Clean</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>