David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Main_Screen_Touchscreen_Clean_Comments__c.field-meta.xml
<CustomField>
    <fullName>Main_Screen_Touchscreen_Clean_Comments__c</fullName>
    <label>Main Screen &amp; Touchscreen Clean Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>