David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mainslead_Visual_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Mainslead_Visual_Inspection__c</fullName>
    <label>Mainslead Visual Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>