David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mainslead_Visual_Inspection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mainslead_Visual_Inspection_Comments__c</fullName>
    <label>Mainslead Visual Inspection Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>