David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_Model__c</fullName>
    <label>Make/Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>