David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mechanical_Security__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Security__c</fullName>
    <label>Mechanical Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>