David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mechanical_Security_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Security_Comments__c</fullName>
    <label>Mechanical Security Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>