David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mechanism_Integrity__c.field-meta.xml
<CustomField>
    <fullName>Mechanism_Integrity__c</fullName>
    <label>Mechanism Integrity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>