David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Mechanisms_Stripped_and_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Mechanisms_Stripped_and_Cleaned__c</fullName>
    <label>Mechanisms Stripped and Cleaned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>