David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Medical_Devices_Logbook__c.field-meta.xml
<CustomField>
    <fullName>Medical_Devices_Logbook__c</fullName>
    <label>Medical Devices Logbook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Not Present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>