David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Medical_Devices_Logbook_Comments__c.field-meta.xml
<CustomField>
    <fullName>Medical_Devices_Logbook_Comments__c</fullName>
    <label>Medical Devices Logbook Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>