David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/mF_Outputs__c.field-meta.xml
<CustomField>
    <fullName>mF_Outputs__c</fullName>
    <label>mF Outputs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>