David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/mF_Outputs_Comments__c.field-meta.xml
<CustomField>
    <fullName>mF_Outputs_Comments__c</fullName>
    <label>mF Outputs Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>