David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <formula>Work_Order__r.Modality__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Work Order&apos;s &quot;Modality&quot; field</inlineHelpText>
    <label>Modality</label>
    <type>Text</type>
</CustomField>